Header fixes (#9)
* incrase spacing on copyright

* move global css to its own folder

* fix tray overlap

* header

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -39,27 +39,6 @@
   z-index: 100;
   height: 100vh;
 }
-.tray ul {
-  margin: 3.5em 0 0;
-  padding: 0;
-}
-.tray a {
-  color: white;
-  display: block;
-  padding: 0.75em 1em 0.6em;
-  border-top: 1px solid rgba(255, 255, 255, 0.25);
-}
-.tray a.active {
-  color: var(--col-orange);
-}
-
-.tray a:hover {
-  text-decoration: underline;
-}
-
-.tray li:first-child a {
-  border-top: 0;
-}
 
 .trayOpen {
   transform: translateX(0);
@@ -77,6 +56,47 @@
   visibility: visible;
 }
 
+.pagesMenu {
+  padding-top: 3em;
+  color: var(--col-white);
+}
+
+.pagesMenu h2,
+.pagesMenu a {
+  color: inherit;
+}
+.pagesMenu h2 {
+  font: 500 1em var(--oswald);
+  color: var(--col-blue);
+  padding: 1em 0 0 1.5rem;
+  margin: 1em 0 0;
+  text-transform: uppercase;
+  border-top: 1px solid rgba(255, 255, 255, 0.25);
+}
+.pagesMenu div:first-child h2 {
+  border: none;
+}
+.pagesMenu ul {
+  padding: 0;
+  margin: 0;
+}
+.pagesMenu a {
+  color: white;
+  display: block;
+  padding: 0.75em 1.5rem 0.6em;
+}
+.pagesMenu a.active {
+  color: var(--col-orange);
+}
+
+.pagesMenu a:hover {
+  text-decoration: underline;
+}
+
+.pagesMenu li:first-child a {
+  border-top: 0;
+}
+
 /* Hamburger Menu */
 
 button.toggle {
@@ -89,6 +109,8 @@ button.toggle {
   margin-right: 0.75em;
   transition: transform 0.5s;
   z-index: 110;
+  position: absolute;
+  left: -6em;
 }
 button.toggle:hover {
   text-decoration: none;
@@ -135,7 +157,7 @@ button.toggle span {
 }
 
 .trayOpen button.toggle {
-  transform: translateX(3em);
+  transform: translateX(3.5em);
 }
 
 .trayOpen button.toggle span {
